--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="about-video-area mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <figure>
-                            <img src="img/bg-img/me.jpg" alt="">
+                            <img src="img/bg-img/me.jpg" alt="" id="aboutphoto">
                             <figcaption><a href="https://www.instagram.com/julia.klimova12/" target="_blank">photo by @julia.klimova </a></figcaption>
                         </figure>
                         <!--div class="video-icon">
