--- a/gallery.html
+++ b/gallery.html
@@ -196,6 +196,7 @@
                         </figure>
                     </div>
                 </div>
+
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nudes mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
@@ -271,6 +272,124 @@
                 </div>
 
                 <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u8.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u8.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U8PAR Paris 25x25, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u14.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u14.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U14ROM Trastevere DINA5, 30Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u15.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u15.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U15IST Village, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u19.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u19.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U19GOE Göttingen DINA5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u20.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u20.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U20IST Kadıköy 25x25, 40Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u22.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u22.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U22DRN Dresden, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u23.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u23.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U23PRS Paris DINA5, 40Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u18.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u18.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U18DRN Neustadt Dresden DINA5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u24.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u24.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U24KBH Kobenhavn DINA5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban goe mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <figure>
@@ -292,6 +411,98 @@
                                 <a href="img/bg-img/u9.jpg" class="portfolio-img">+</a>
                             </div>
                             <figcaption>#U9GOE Göttingen DIN5, 30Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban graphics mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u16.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u16.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U16IST Beyoğlu DINA5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban graphics mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u17.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u17.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U17GOE Göttingen DINA5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban graphics mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u10.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u10.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U10AMS Amsterdam DINA5, 30Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban graphics mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/u13.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/u13.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#U13BLN Alexanderplatz, 15Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g8.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g8.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G8GOE Jakobikirche Göttingen, DIN A5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g9.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g9.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G9BLN Branderburger Tor, DIN A5, 25Eu</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                 <!-- Single Gallery Item -->
+                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics urban mb-30 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <figure>
+                            <img src="img/bg-img/g7.jpg" alt="">
+                            <div class="hover-content">
+                                <a href="img/bg-img/g7.jpg" class="portfolio-img">+</a>
+                            </div>
+                            <figcaption>#G7BRC La Rambla, DIN A5, 25Eu</figcaption>
                         </figure>
                     </div>
                 </div>
