--- a/index.html
+++ b/index.html
@@ -181,6 +181,16 @@
                 </div>
 
                 <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/u3.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/u3.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/bg-img/u1.jpg" alt="">
@@ -199,17 +209,7 @@
                         </div>
                     </div>
                 </div>
-
-                <span id="more">
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/u3.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/u3.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
+                
 
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nudes mb-30 wow fadeInUp" data-wow-delay="100ms">
@@ -222,11 +222,31 @@
                 </div>
 
                 <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item urban mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/u23.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/u23.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics urban mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/u13.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/u13.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item graphics mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/g1.jpg" alt="">
+                        <img src="img/bg-img/g8.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/g1.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/g8.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -239,8 +259,7 @@
                             <a href="img/bg-img/g2.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
-                </div>                
-                </span>
+                </div>                                
             </div>
 
             <div class="row">
@@ -392,12 +411,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/alime.bundle.js"></script>
     <!-- Active -->
     <script src="js/default-assets/active.js"></script>
-
-    <script>
-        function hideshow() {          
-          document.getElementById("more").style.display = "inline";          
-        }
-    </script>
+    
 </body>
 
 </html>
